--- a/css/main.css
+++ b/css/main.css
@@ -25,14 +25,18 @@ html{
   }
 
   .logo {
-  background-image: url(../images/images/filmclub.png);
-  background-repeat: no-repeat;
-  background-size: contain;
-  position: relative;
-  width:27%;
+  display: flex;
+  align-items: center;
+  width:25%;
   background-color: #F5005B;
   height:120px;
+  padding-left: 10px;
+  min-width: 115px;
+  max-width: 115px;
+  }
 
+  .logo img{
+    height: 100px;
   }
 
   .nav-row{
@@ -41,31 +45,36 @@ html{
   flex-direction: column;
   width:75%;
   text-align: center;
+  list-style: none;
   }
 
 .nav-row a{
   color:white;
   text-decoration: none;
   font-family: PT sans;
-  font-size: 12px;
+  font-size: 15px;
+
 }
+.nav-item{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex: 1;
+
+}
+
 .nav-item1{
   background-color: #00a5bf;
-  padding-top:10px;
-  padding-bottom: 10px;
 }
 
 .nav-item2{
   background-color: #00b7d3;
-  padding-top:10px;
-  padding-bottom: 10px;
 }
 
 .nav-item3{
   background-color: #00d5e7;
-  padding-top:10px;
-  padding-bottom: 10px;
 }
+
 .section_container1{
   margin-left: 30px;
   margin-right: 30px;
@@ -137,17 +146,18 @@ h1{
 
 .section_container2 h2{
   color: white;
-padding-top: 10px;
+  padding-top: 10px;
   padding-bottom: 10px;
   font-size: 30px;
   font-weight: lighter;
   padding-left: 20px;
+
 }
 
 .poster-container1{
   display: flex;
   flex-direction: row;
-  flex-wrap: wrap;
+  flex-wrap: nowrap;
   background-color: #e2e2e2;
   margin: 20px;
 }
@@ -157,6 +167,7 @@ margin-right: 20px;
 margin-top: 20px;
 margin-bottom: 20px;
 line-height: 1.5;
+width: calc( 50% - 20px);
 }
 
 .rashomon_info p{
@@ -171,7 +182,7 @@ line-height: 1.5;
 
 .rashomon_info a{
   font-size: 20px;
-  width: 50%;
+
 }
 .rashomon_poster{
   background-image: url(../images/images/rashomon-poster.jpg);
@@ -186,75 +197,73 @@ line-height: 1.5;
 }
 
 .poster-container2{
-  background-color: #e2e2e2;
-  margin-top: 20px;
-  margin-left: 20px;
-  margin-right:20px;
-  margin-bottom: 20px;
-  width:90%;
-
-
-}
-.posters{
-  list-style: none;
-}
-
-.posters ul{
-list-style: none;
-display: flex;
-flex-wrap: wrap;
-flex-direction: row;
-
-}
-
-.posters li{
-  margin:20px;
-  width: 30%;
-}
-
-.footer-row{
-  display: flex;
+  display:flex;
+  justify-content: space-between;
   flex-wrap: wrap;
-  flex-direction: column;
-  width:100%;
-  text-align: center;
+  background-color: #e2e2e2;
+  margin: 20px;
+}
+
+.poster{
+  width: calc(50% - 20px);
+  margin:10px;
+  line-height: 2;
+}
+
+.poster a{
+  color:#58c2d7;
+}
+.poster img{
+  width: 100%;
+}
+
+footer {
+display: flex;
+flex:1;
+flex-wrap: wrap;
+flex-direction: column;
+width:100%;
+text-align: center;
+list-style: none;
+height:120px;
 }
 
 .footer-row a{
-  color:white;
-  text-decoration: none;
-  font-family: PT sans;
-  font-size: 12px;
+color:white;
+text-decoration: none;
+font-family: PT sans;
+font-size: 15px;
 }
 
-footer{
-  padding:40px;
+
+.copywrite{'
+display: flex;
+  flex:1;
+  width:100%;
+  color: white;
   background-color: #7ddfe8;
+  font-size: 15px;
+
 }
 
 /*tablet layout home page*/
 @media screen and ( min-width: 544px) {
 
+
+
   .nav-row{
-  display: flex;
-  flex-wrap: wrap;
+  display:flex;
   flex-direction: row;
-  flex:1;
   text-align: center;
   background-color: #7ddfe8;
-  list-style: none;
-  height:100px;
+  width: 100%;
+
+
   }
 
-  .logo{
-    width: 15%;
-    height:100px;
-  }
-
-  .nav-item1, .nav-item2, .nav-item3 {
-    width:15%;
-    padding-top:20px;
-    height:100px;
+  .nav-item {
+    width: 20%;
+    flex: none;
   }
 
   .section_container1{
@@ -271,7 +280,6 @@ footer{
 
   .rashomon_poster{
     height: 300px;
-
     margin-top:10px;
   margin-bottom:10px;
   margin-left: 10px;
@@ -280,25 +288,47 @@ footer{
   .rashomon_info{
     width: calc(40% - 20px);
     float: right;
+}
 
-  }
-.posters{
+.poster-container2{
   display: flex;
-  flex-direction: row;
   flex-wrap: nowrap;
 }
 
-.posters img{
-  width: 100%;
+.poster{
+  width: 25%;
+  font-size: 15px;
 }
 
-  .footer-row{
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: row;
-    flex:1;
-    text-align: center;
-    list-style: none;
-    height:100px;
-  }
+footer{
+  flex-direction: row;
+
+}
+.footer-row{
+  flex:1;
+  display: flex;
+}
+
+.footer-row .nav-item{
+  flex:1;
+  padding: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+
+.copywrite{
+  flex:1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+}
+
+/*Home Desktop*/
+
+@media screen and (min-width: 769px) {
+
 }
