--- a/css/main.css
+++ b/css/main.css
@@ -12,7 +12,7 @@
   background: transparent;
 }
 
-/*Homepage*/
+/*--------------Homepage-------------------*/
 
 html{
   font-family: PT sans;
@@ -52,7 +52,7 @@ html{
   color:white;
   text-decoration: none;
   font-family: PT sans;
-  font-size: 15px;
+  font-size: 12px;
 
 }
 .nav-item{
@@ -182,6 +182,7 @@ width: calc( 50% - 20px);
 
 .rashomon_info a{
   font-size: 20px;
+  color: #16bbd4;
 
 }
 .rashomon_poster{
@@ -225,24 +226,26 @@ flex-direction: column;
 width:100%;
 text-align: center;
 list-style: none;
-height:120px;
 }
 
 .footer-row a{
 color:white;
 text-decoration: none;
 font-family: PT sans;
-font-size: 15px;
+font-size: 12px;
 }
 
-
+.footer-row .nav-item{
+  padding:8px;
+}
 .copywrite{'
 display: flex;
   flex:1;
   width:100%;
   color: white;
   background-color: #7ddfe8;
-  font-size: 15px;
+  font-size: 12px;
+  padding:25px;
 
 }
 
@@ -290,6 +293,7 @@ display: flex;
     float: right;
 }
 
+
 .poster-container2{
   display: flex;
   flex-wrap: nowrap;
@@ -315,6 +319,7 @@ footer{
   display: flex;
   justify-content: center;
   align-items: center;
+  padding:50px;
 }
 
 
@@ -331,4 +336,41 @@ footer{
 
 @media screen and (min-width: 769px) {
 
+.section_container2{
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+}
+h2{
+  width: 100%;
+}
+
+.poster-container1{
+  display: flex;
+  flex:1;
+  height: 50%;
+}
+
+.rashomon_info{
+  margin:20px;
+}
+
+
+.poster-container2{
+  display: flex;
+  flex-wrap: wrap;
+  flex:1;
+}
+
+.poster{
+  width: calc(50% - 20px);
+  margin:10px;
+  line-height: 2;
+}
+}
+
+/*-------------------join-----------------*/
+
+.profile-pic{
+  border-radius: 50%;
 }
