continued work on join html

--- a/css/main.css
+++ b/css/main.css
@@ -457,4 +457,8 @@ padding-left: 100px;
     width: 100px;
   }
 
-  /*----------join-----------*/
+/*-------------join------------*/
+
+input, #name{
+  background: blue;
+}
