--- a/css/main.css
+++ b/css/main.css
@@ -371,6 +371,8 @@ h2{
 
 /*-------------------calendar-----------------*/
 
+@media screen and (min-width: 320px) {
+
 .cal-title{
   color: white;
   font-weight: lighter;
@@ -420,6 +422,7 @@ width:20px;
   list-style: none;
   border: 1px solid #0b1942;
 }
+}
 
 /*-------------calendar tablet----*/
 
@@ -439,13 +442,13 @@ width:20px;
 text-align: right;
 padding-right: 0;
 padding-left: 100px;
+
 }
 }
 
 /*-------------calendar desktop----*/
 
 @media screen and (min-width: 769px) {
-
 
   .box{
     height: 100px;
@@ -456,9 +459,56 @@ padding-left: 100px;
     height: 100px;
     width: 100px;
   }
-
+}
 /*-------------join------------*/
 
-input, #name{
-  background: blue;
+@media screen and (min-width: 0px) {
+
+.profile-pic img{
+  border-radius: 50%;
+  width: 75%;
+  margin: 40px;
+}
+
+.file-container{
+  margin: 10px;
+padding-left:10px;
+}
+
+.input-container{
+  display:flex;
+  flex-direction: column;
+  flex: 1;
+  margin: 10px 20px;
+
+}
+
+.input-container input{
+  border: thin solid lightgrey;
+  padding:5px;
+}
+.interest{
+  margin: 10px;
+}
+
+.interest h3{
+  font-weight: lighter;
+  margin: 20px;
+  font-size: 13px;
+}
+
+.genres{
+  margin: 10px;
+  font-size: 13px;
+
+}
+
+.signup-type{
+  margin: 10px;
+  list-style-type: square;
+}
+
+.additional-container{
+
+}
 }
