--- a/css/main.css
+++ b/css/main.css
@@ -16,7 +16,9 @@
 
 html{
   font-family: PT sans;
+  cursor: pointer;
 }
+
   nav{
     display: flex;
     flex-direction: row;
@@ -509,6 +511,29 @@ padding-left:10px;
 }
 
 .additional-container{
+display: flex;
+flex-direction: column;
+  margin: 20px;
+  font-size: 13px;
+}
 
+#textarea{
+  border: thin solid lightgrey;
+  width: 95%;
+  padding: 20px;
+
+
+}
+
+.film-button{
+  width: 30%;
+  min-width: 150px;
+  padding: 20px;
+  font-size: 15px;
+  margin-top:10px;
+  margin-left: 20px;
+  margin-bottom: 50px;
+  background-color: #f5005b;
+  color:white;
 }
 }
