--- a/css/main.css
+++ b/css/main.css
@@ -14,10 +14,10 @@
 
 /*--------------Homepage-------------------*/
 
-html{
-  font-family: PT sans;
-  cursor: pointer;
-}
+  html{
+    font-family: PT sans;
+    cursor: pointer;
+  }
 
   nav{
     display: flex;
@@ -27,14 +27,14 @@ html{
   }
 
   .logo {
-  display: flex;
-  align-items: center;
-  width:25%;
-  background-color: #F5005B;
-  height:120px;
-  padding-left: 10px;
-  min-width: 115px;
-  max-width: 115px;
+    display: flex;
+    align-items: center;
+    width:25%;
+    background-color: #F5005B;
+    height:120px;
+    padding-left: 10px;
+    min-width: 115px;
+    max-width: 115px;
   }
 
   .logo img{
@@ -42,27 +42,26 @@ html{
   }
 
   .nav-row{
-  display: flex;
-  flex-wrap: wrap;
-  flex-direction: column;
-  width:75%;
-  text-align: center;
-  list-style: none;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    width:75%;
+    text-align: center;
+    list-style: none;
   }
 
-.nav-row a{
+  .nav-row a{
   color:white;
   text-decoration: none;
   font-family: PT sans;
   font-size: 12px;
-
 }
+
 .nav-item{
   display: flex;
   align-items: center;
   justify-content: center;
   flex: 1;
-
 }
 
 .nav-item1{
@@ -165,11 +164,11 @@ h1{
 }
 
 .rashomon_info{
-margin-right: 20px;
-margin-top: 20px;
-margin-bottom: 20px;
-line-height: 1.5;
-width: calc( 50% - 20px);
+  margin-right: 20px;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  line-height: 1.5;
+  width: calc( 50% - 20px);
 }
 
 .rashomon_info p{
@@ -221,27 +220,28 @@ width: calc( 50% - 20px);
 }
 
 footer {
-display: flex;
-flex:1;
-flex-wrap: wrap;
-flex-direction: column;
-width:100%;
-text-align: center;
-list-style: none;
+  display: flex;
+  flex:1;
+  flex-wrap: wrap;
+  flex-direction: column;
+  width:100%;
+  text-align: center;
+  list-style: none;
 }
 
 .footer-row a{
-color:white;
-text-decoration: none;
-font-family: PT sans;
-font-size: 12px;
+  color:white;
+  text-decoration: none;
+  font-family: PT sans;
+  font-size: 12px;
+  
 }
 
 .footer-row .nav-item{
   padding:8px;
 }
-.copywrite{'
-display: flex;
+
+.copywrite{
   flex:1;
   width:100%;
   color: white;
@@ -254,16 +254,12 @@ display: flex;
 /*tablet layout home page*/
 @media screen and ( min-width: 544px) {
 
-
-
   .nav-row{
-  display:flex;
-  flex-direction: row;
-  text-align: center;
-  background-color: #7ddfe8;
-  width: 100%;
-
-
+    display:flex;
+    flex-direction: row;
+    text-align: center;
+    background-color: #7ddfe8;
+    width: 100%;
   }
 
   .nav-item {
@@ -275,62 +271,60 @@ display: flex;
     display: flex;
     flex-wrap: nowrap;
     flex-direction: row;
-
-
   }
+
   .watch, .take_notes, .meetup{
     margin: 10px;
-  width: 30%;
+    width: 30%;
   }
 
   .rashomon_poster{
     height: 300px;
     margin-top:10px;
-  margin-bottom:10px;
-  margin-left: 10px;
+    margin-bottom:10px;
+    margin-left: 10px;
   }
 
   .rashomon_info{
     width: calc(40% - 20px);
     float: right;
-}
+  }
+
+  .poster-container2{
+    display: flex;
+    flex-wrap: nowrap;
+  }
+
+  .poster{
+    width: 25%;
+    font-size: 15px;
+  }
+
+  footer{
+    flex-direction: row;
+
+  }
+  .footer-row{
+    flex:1;
+    display: flex;
+  }
+
+  .footer-row .nav-item{
+    flex:1;
+    padding: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding:50px;
+  }
 
 
-.poster-container2{
-  display: flex;
-  flex-wrap: nowrap;
-}
-
-.poster{
-  width: 25%;
-  font-size: 15px;
-}
-
-footer{
-  flex-direction: row;
-
-}
-.footer-row{
-  flex:1;
-  display: flex;
-}
-
-.footer-row .nav-item{
-  flex:1;
-  padding: 0;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  padding:50px;
-}
-
-
-.copywrite{
-  flex:1;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
+  .copywrite{
+    flex:1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
 
 }
 
@@ -338,114 +332,116 @@ footer{
 
 @media screen and (min-width: 769px) {
 
-.section_container2{
-  display: flex;
-  flex-wrap: wrap;
-  flex-direction: row;
-}
-h2{
-  width: 100%;
-}
+  .section_container2{
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+  }
 
-.poster-container1{
-  display: flex;
-  flex:1;
-  height: 50%;
-}
+  h2{
+    width: 100%;
+  }
 
-.rashomon_info{
-  margin:20px;
-}
+  .poster-container1{
+    display: flex;
+    flex:1;
+    height: 50%;
+  }
 
+  .rashomon_info{
+    margin:20px;
+  }
 
-.poster-container2{
-  display: flex;
-  flex-wrap: wrap;
-  flex:1;
-}
+  .poster-container2{
+    display: flex;
+    flex-wrap: wrap;
+    flex:1;
+  }
 
-.poster{
-  width: calc(50% - 20px);
-  margin:10px;
-  line-height: 2;
-}
+  .poster{
+    width: calc(50% - 20px);
+    margin:10px;
+    line-height: 2;
+  }
 }
 
 /*-------------------calendar-----------------*/
 
 @media screen and (min-width: 320px) {
 
-.cal-title{
-  color: white;
-  font-weight: lighter;
-  margin:15px;
-  width: 100%;
-  font-size: 20px;
+  .cal-title{
+    color: white;
+    font-weight: lighter;
+    margin:15px;
+    width: 100%;
+    font-size: 20px;
 
-}
+  }
 
-.month{
-  display: flex;
-  flex-direction: row;
-  justify-content: flex-start;
+  .month{
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    background-color: #0b1942;
+  }
+
+  .days ul{
+    display: flex;
+    flex-wrap: wrap;
+    background-color:  #0b1942;
+    color:white;
+    font-size: 10px;
+    padding-bottom:30px;
+  }
+
+  .days li{
   background-color: #0b1942;
-}
+  padding-left: 5px;
+  padding-top:5px;
+  height:20px;
+  width:20px;
 
-.days ul{
-  display: flex;
-  flex-wrap: wrap;
-  background-color:  #0b1942;
-  color:white;
-  font-size: 10px;
-  padding-bottom:30px;
-}
+  }
 
-.days li{
-background-color: #0b1942;
-padding-left: 5px;
-padding-top:5px;
-height:20px;
-width:20px;
+  .box{
+    background: white;
+    width: 50px;
+    height: 50px;
+    list-style: none;
+    border: 1px solid #0b1942;
+  }
 
-}
-
-.box{
-  background: white;
-  width: 50px;
-  height: 50px;
-  list-style: none;
-  border: 1px solid #0b1942;
-}
-
-.active{
-  background-color: #f5005b;
-  width: 50px;
-  height: 50px;
-  list-style: none;
-  border: 1px solid #0b1942;
-}
+  .active{
+    background-color: #f5005b;
+    width: 50px;
+    height: 50px;
+    list-style: none;
+    border: 1px solid #0b1942;
+  }
 }
 
 /*-------------calendar tablet----*/
 
 @media screen and (min-width: 544px) {
 
-.box{
-  height: 80px;
-  width: 80px;
-}
+  .box{
+    height: 80px;
+    width: 80px;
+  }
 
-.active{
-  height: 80px;
-  width: 80px;
-}
+  .active{
+    height: 80px;
+    width: 80px;
+  }
 
-.copywrite{
-text-align: right;
-padding-right: 0;
-padding-left: 100px;
+  .copywrite{
+    text-align: right;
+    padding-right: 0;
+    padding-left: 100px;
 
-}
+  }
+
+
 }
 
 /*-------------calendar desktop----*/
@@ -466,74 +462,156 @@ padding-left: 100px;
 
 @media screen and (min-width: 0px) {
 
-.profile-pic img{
-  border-radius: 50%;
-  width: 75%;
-  margin: 40px;
-}
-
-.file-container{
-  margin: 10px;
-padding-left:10px;
-}
-
-.input-container{
-  display:flex;
-  flex-direction: column;
-  flex: 1;
-  margin: 10px 20px;
+h1{
 
 }
-
-.input-container input{
-  border: thin solid lightgrey;
+.file-container h5{
+  font-weight: lighter;
+  margin-left: 15px;
   padding:5px;
 }
-.interest{
-  margin: 10px;
+
+#file{
+  font-size: 12px;
+  margin-left: 15px;
+}
+  .profile-pic img{
+    border-radius: 50%;
+    width: 75%;
+    margin: 40px;
+  }
+
+  .file-container{
+    margin: 10px 0;
+    padding:10px;
+  }
+
+  .input-container{
+    display:flex;
+    flex-direction: column;
+    flex: 1;
+    margin: 10px 20px;
+  }
+
+  .input-container input{
+    border: thin solid lightgrey;
+    padding:5px;
+  }
+  .interest{
+    margin: 10px;
+  }
+
+  .interest h3{
+    font-weight: lighter;
+    margin: 20px;
+    font-size: 13px;
+  }
+
+  .genres{
+    margin: 15px;
+    font-size: 13px;
+  }
+
+  .signup-type{
+    margin: 15px;
+    list-style-type: square;
+  }
+
+  .additional-container{
+  display: flex;
+  flex-direction: column;
+    margin: 20px;
+    font-size: 13px;
+  }
+
+  #textarea{
+    border: thin solid lightgrey;
+    width: 95%;
+    padding: 20px;
+  }
+
+  .film-button{
+    width: 30%;
+    min-width: 150px;
+    padding: 20px;
+    font-size: 15px;
+    margin-top:10px;
+    margin-left: 20px;
+    margin-bottom: 50px;
+    background-color: #f5005b;
+    color:white;
+  }
+
 }
 
-.interest h3{
-  font-weight: lighter;
-  margin: 20px;
-  font-size: 13px;
+/*-----------join tablet-------------*/
+
+@media screen and (min-width: 544px) {
+
+.top-form{
+  display: flex;
+  flex-direction: row;
 }
 
+.download-container{
+  width: 50%;
+ 
+}
+
+.entire-input-container{
+ width: 50%;
+ margin-top:60px;
+ margin-right:20px;
+
+}
+.top-container{
+  margin-bottom: 60px;
+  
+}
+.input-container{
+  margin-bottom: 20px;
+
+}
 .genres{
-  margin: 10px;
-  font-size: 13px;
+  display: flex;
+  flex-wrap: wrap;
 
+}
+.signup-type{
+  width: 45%;
+  margin: 5px;
+}
+
+}
+
+/*-------------join desktop-----------*/
+
+@media screen and (min-width: 769px){
+
+.entire-input-container{
+  display: flex;
+  display: row;
+  width:60%;
+  margin-right: 0;
+
+}
+
+.profile-pic{
+ width: 100%;
+ margin-right: 0px;
+}
+.top-container{
+  width: 100%;
+}
+
+.bottom-container{
+  width: 100%;
+  margin: 0;
 }
 
 .signup-type{
-  margin: 10px;
-  list-style-type: square;
-}
-
-.additional-container{
-display: flex;
-flex-direction: column;
-  margin: 20px;
-  font-size: 13px;
-}
-
-#textarea{
-  border: thin solid lightgrey;
-  width: 95%;
-  padding: 20px;
-
-
-}
-
-.film-button{
-  width: 30%;
-  min-width: 150px;
-  padding: 20px;
-  font-size: 15px;
-  margin-top:10px;
-  margin-left: 20px;
-  margin-bottom: 50px;
-  background-color: #f5005b;
-  color:white;
+  width: 25%;
+  margin: 5px;
 }
 }
+
